Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-2062] fixed sending of recovery messages multiple times (Sasha)
 - [ZBX-1878] reverted map label background drawing (Aly)
 - [ZBX-2016] fixed code with "_itow_s()" and "zbx_wsnprintf" to avoid possible run-time memory corruption. Thanks to Takanori Suzuki. (Dmitry)
 - [ZBX-2059] fixed special char treatment in XML export (Aly)
 - [ZBX-1655] improved error message on map save with circular reference (Aly)
 - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
 - [ZBX-1991] added sequences for autoincrement fields to oracle.sql (Sasha)
 - [ZBX-2045] fixed trigger editor does not preserve element ordering (Vedmak)
 - [ZBX-2003] fixed evaluation of division and subtraction (asaveljevs)
 - [ZBX-2029] fixed monitoring triggers showing triggers with true dependencies (Vedmak)
 - [ZBX-1902] fixed error when create dependency for trigger that belongs to same template (Vedmak)
 - [ZBX-1705] fixed various front-end problems with Oracle database (Alexei)
 - [ZBX-1299] added check for the minimal (1.0.0) libssh2 library version (Dmitry)
 - [ZBX-1975] fixed permission check in graphs with web ites (Aly)
 - [ZBX-2023] improved configuration triggers page (Aly)
 - [DEV-453] implemented import/export of zabbix maps (Aly)
 - [ZBX-1320] fixed graph header alignment (Vedmak)
 - [ZBX-2041] minor configuration comment change about LogFile parameter for Windows agent (Dmitry)
 - [ZBX-1876] added remarks to configuration files of Zabbix server and proxy about fping6 (Dmitry)
 - [ZBX-1876] fixed processing of ICMP pings when "fping" or "fping6" binaries are missing (Dmitry)
 - [ZBX-1995] fixed errors when save/update web scenario with existing name (Vedmak)
 - [ZBX-2014] fixed pie chart in screen renders last hour of data only (Vedmak)
 - [ZBX-2025] fixed deletion of actions (Vedmak)